Добавил пункты и подпункты меню и боковое меню на внутренней странице

--- a/darelsalam/hajj.html
+++ b/darelsalam/hajj.html
@@ -128,41 +128,34 @@
                       </span>
                     </a>
                     <ul class='dropdown-menu' role='menu'>
-                      <li class='active'>
-                        <a href='hajj.html'>Хадж 2017</a>
+                      <li class='dropdown-submenu'>
+                        <a href='hajj.html'>
+                          Программы Хаджа 2017
+                          <i class='fa fa-angle-right'></i>
+                        </a>
+                        <ul class='dropdown-menu' role='menu'>
+                          <li>
+                            <a href='index.html'>Программа Хаджа «ДЭЛЮКС»</a>
+                          </li>
+                          <li>
+                            <a href='index.html'>Программа Хаджа «ЛЮКС»</a>
+                          </li>
+                          <li>
+                            <a href='index.html'>Программа Хаджа «ЭКОНОМ»</a>
+                          </li>
+                          <li>
+                            <a href='index.html'>Программа Хаджа «СУПЕР ЭКОНОМ»</a>
+                          </li>
+                        </ul>
                       </li>
                       <li class=''>
-                        <a href='index.html'>Home</a>
+                        <a href='index.html'>Необходимые документы и способы оплаты</a>
                       </li>
                       <li class=''>
-                        <a href='index2.html'>Home 2</a>
+                        <a href='index2.html'>Основы Хаджа</a>
                       </li>
                       <li class=''>
-                        <a href='index3.html'>Home 3</a>
-                      </li>
-                      <li class=''>
-                        <a href='boxed.html'>Boxed layout</a>
-                      </li>
-                      <li class=''>
-                        <a href='about_us.html'>About us</a>
-                      </li>
-                      <li class=''>
-                        <a href='services.html'>Services</a>
-                      </li>
-                      <li class=''>
-                        <a href='faq.html'>FAQ</a>
-                      </li>
-                      <li>
-                        <a href='404.html'>404 Error</a>
-                      </li>
-                      <li>
-                        <a href='500.html'>500 Error</a>
-                      </li>
-                      <li>
-                        <a href='coming_soon.html'>Coming soon</a>
-                      </li>
-                      <li>
-                        <a href='under_construction.html'>Under construction</a>
+                        <a href='index3.html'>Как правильно выбрать путевку на Хадж</a>
                       </li>
                     </ul>
                   </li>
@@ -174,61 +167,106 @@
                       </span>
                     </a>
                     <ul class='dropdown-menu' role='menu'>
-                      <li class=''>
-                        <a href='animations.html'>Animations</a>
-                      </li>
-                      <li class=''>
-                        <a href='elements.html'>Elements</a>
-                      </li>
-                      <li class=''>
-                        <a href='icons.html'>Icons</a>
-                      </li>
-                      <li class=''>
-                        <a href='forms.html'>Forms</a>
-                      </li>
-                      <li class=''>
-                        <a href='tables.html'>Tables</a>
-                      </li>
-                      <li class=''>
-                        <a href='typography.html'>Typography</a>
-                      </li>
-                      <li class=''>
-                        <a href='pricing_tables.html'>Pricing tables</a>
-                      </li>
                       <li class='dropdown-submenu'>
-                        <a href='index.html'>
-                          Submenu
+                        <a href='hajj.html'>
+                          Программы Умры 2017
                           <i class='fa fa-angle-right'></i>
                         </a>
                         <ul class='dropdown-menu' role='menu'>
                           <li>
-                            <a href='index.html'>Submenu item</a>
+                            <a href='index.html'>Программа Умры «РАДЖАБ», Апрель 2017</a>
                           </li>
                           <li>
-                            <a href='index.html'>Submenu item</a>
+                            <a href='index.html'>Программа Умры «ШААБАН», Май 2017</a>
                           </li>
                           <li>
-                            <a href='index.html'>Submenu item</a>
+                            <a href='index.html'>Программа Умры «Зам-Зам», 5 звезд в Апреле и в Мае</a>
                           </li>
                         </ul>
                       </li>
+                      <li class=''>
+                        <a href='elements.html'>Необходимые документы и способы оплаты</a>
+                      </li>
+                      <li class='dropdown-submenu'>
+                        <a href='hajj.html'>
+                          Умра в Рамадан
+                          <i class='fa fa-angle-right'></i>
+                        </a>
+                        <ul class='dropdown-menu' role='menu'>
+                          <li>
+                            <a href='index.html'>Программа Умры «ВЕСЬ РАМАДАН»</a>
+                          </li>
+                          <li>
+                            <a href='index.html'>Программа Умры «ПОСЛЕДНИЕ 10 ДНЕЙ РАМАДАНА». 3 звезды</a>
+                          </li>
+                          <li>
+                            <a href='index.html'>Программа Умры «ЗАМ-ЗАМ» ПОСЛЕДНИЕ 10 ДНЕЙ РАМАДАНА», 5 звезд</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="javascript:void(0)">
+                          Индивидуальные программы Умры
+                        </a>
+                      </li>
+                      <li class=''>
+                        <a href='forms.html'>Основы Умры</a>
+                      </li>
                     </ul>
                   </li>
-                  <li>
-                    <a href='#'>
+                  <li class='dropdown'>
+                    <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
                       <span>
-                        Дар Эль Салам
+                        Особенности
                         <br>
-                        о компании
+                        «Дар эль Салам»
+                        <i class='fa fa-angle-down'></i>
                       </span>
                     </a>
+                    <ul class='dropdown-menu' role='menu'>
+                      <li class=''>
+                        <a href='animations.html'>О компании</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Особенности программ от Дар эль Салам</a>
+                      </li>
+                    </ul>
                   </li>
-                  <li>
-                    <a href='#'>
+                  <li class='dropdown'>
+                    <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
                       <span>
-                        В помощь <br> паломникам
+                        Полезная
+                        <br>
+                        информация
+                        <i class='fa fa-angle-down'></i>
                       </span>
                     </a>
+                    <ul class='dropdown-menu' role='menu'>
+                      <li class=''>
+                        <a href='animations.html'>Главное о Хадже</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Как подготовиться к Хаджу и Умре</a>
+                      </li>
+                      <li class=''>
+                        <a href='animations.html'>Книги о Хадже и Умре</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Памятка паломнику</a>
+                      </li>
+                      <li class=''>
+                        <a href='animations.html'>Словарь терминов</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Польза и ценность совершения Хаджа и Умры</a>
+                      </li>
+                      <li class=''>
+                        <a href='animations.html'>Проверка знаний</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Статьи о Хадже и Умре</a>
+                      </li>
+                    </ul>
                   </li>
                   <li class='dropdown'>
                     <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
@@ -239,25 +277,37 @@
                     </a>
                     <ul class='dropdown-menu' role='menu'>
                       <li class=''>
-                        <a href='portfolio.html'>2 columns</a>
+                        <a href='animations.html'>Фото с Хаджа с «Дар эль Салам»</a>
                       </li>
                       <li class=''>
-                        <a href='portfolio_three_cols.html'>3 columns</a>
+                        <a href='elements.html'>Видео с Хаджа</a>
                       </li>
                       <li class=''>
-                        <a href='portfolio_four_cols.html'>4 columns</a>
+                        <a href='animations.html'>Приложения и программы о Хадже</a>
                       </li>
                       <li class=''>
-                        <a href='portfolio_detail.html'>Project detail</a>
+                        <a href='elements.html'>Прямая трансляция из Мекки</a>
+                      </li>
+                      <li class=''>
+                        <a href='animations.html'>Прямая трансляция из Медины</a>
                       </li>
                     </ul>
                   </li>
-                  <li>
-                    <a href='#'>
+                  <li class='dropdown'>
+                    <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
                       <span>
-                        Хадж Миссия России
+                        Хадж-Миссия РФ
+                        <i class='fa fa-angle-down'></i>
                       </span>
                     </a>
+                    <ul class='dropdown-menu' role='menu'>
+                      <li class=''>
+                        <a href='animations.html'>Хадж-Миссия РФ, цели и задачи</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Совет по Хаджу и его состав</a>
+                      </li>
+                    </ul>
                   </li>
                   <li class='dropdown'>
                     <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
@@ -268,13 +318,10 @@
                     </a>
                     <ul class='dropdown-menu' role='menu'>
                       <li class=''>
-                        <a href='contact.html'>Контакты</a>
+                        <a href='contact.html'>Офис в Москве</a>
                       </li>
                       <li class=''>
-                        <a href='contact2.html'>Контакты</a>
-                      </li>
-                      <li class=''>
-                        <a href='contact3.html'>Контакты</a>
+                        <a href='contact2.html'>Представительство в Махачкале</a>
                       </li>
                     </ul>
                   </li>
@@ -305,47 +352,77 @@
           <div class='container'>
             <div class='row'>
               <div class='col-md-push-9 col-sm-push-8 col-sm-4 col-md-3'>
-                <nav class='sidebar sidebar-fixed'>
+                <nav class='sidebar sidebar-fixed' style="width: 100%">
                   <button class='btn btn-block btn-contrast sidebar-toggle' data-target='.sidebar-collapse' data-toggle='collapse' type='button'>
-                    <span class='sr-only'>Toggle navigation</span>
+                    <span class='sr-only'>Навигация</span>
                     <span class='icon-bar'></span>
                     <span class='icon-bar'></span>
                     <span class='icon-bar'></span>
                   </button>
                   <div class='sidebar-collapse collapse'>
                     <div class='box'>
-                      <h3 class='title'>Info</h3>
-                      <ul class='list-unstyled list-padded'>
-                        <li>
-                          <i class='fa fa-user text-contrast fa fa-fixed-width'></i>
-                          Company name
-                        </li>
-                        <li>
-                          <i class='fa fa-calendar text-contrast fa fa-fixed-width'></i>
-                          September 2013
-                        </li>
-                      </ul>
-                    </div>
-                    <div class='box'>
-                      <h3 class='title'>Services</h3>
-                      <ul class='list-unstyled list-padded'>
-                        <li>
-                          <i class='fa fa-check text-contrast fa fa-fixed-width'></i>
-                          Webdesign
-                        </li>
-                        <li>
-                          <i class='fa fa-check text-contrast fa fa-fixed-width'></i>
-                          HTML / CSS
-                        </li>
-                        <li>
-                          <i class='fa fa-check text-contrast fa fa-fixed-width'></i>
-                          Marketing
-                        </li>
-                        <li>
-                          <i class='fa fa-check text-contrast fa fa-fixed-width'></i>
-                          Identity
-                        </li>
-                      </ul>
+                      <h3 class='title'>Категории</h3>
+                      <div class='list-group'>
+                        <div class="list-group-item active">
+                          <div class="list-group-item__menu">
+                            <div class="list-group-item__category-link">
+                              <a href="javascript:void(0)">
+                                <i class='fa fa-angle-right fa fa-fixed-width'></i> Программы Хаджа 2017
+                              </a>
+                            </div>
+                              <div class='list-group-item__submenu'>
+                                <div class="list-group-item__submenu-item">
+                                  <a href='index.html'>
+                                    Программа Хаджа «ДЭЛЮКС»
+                                  </a>
+                                </div>
+                                <div class="list-group-item__submenu-item">
+                                  <a href='index.html'>
+                                    Программа Хаджа «ЛЮКС»
+                                  </a>
+                                </div>
+                                <div class="list-group-item__submenu-item">
+                                  <a href='index.html'>
+                                    Программа Хаджа «ЭКОНОМ»
+                                  </a>
+                                </div>
+                                <div class="list-group-item__submenu-item">
+                                  <a href='index.html'>
+                                    Программа Хаджа «СУПЕР ЭКОНОМ»
+                                  </a>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="list-group-item">
+                          <div class="list-group-item__menu">
+                            <div class="list-group-item__category-link">
+                              <a href="javascript:void(0)">
+                                <i class='fa fa-angle-right fa fa-fixed-width'></i> Необходимые документы и способы оплаты
+                              </a>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="list-group-item">
+                          <div class="list-group-item__menu">
+                            <div class="list-group-item__category-link">
+                              <a href="javascript:void(0)">
+                                <i class='fa fa-angle-right fa fa-fixed-width'></i> Основы Хаджа
+                              </a>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="list-group-item">
+                          <div class="list-group-item__menu">
+                            <div class="list-group-item__category-link">
+                              <a href="javascript:void(0)">
+                                <i class='fa fa-angle-right fa fa-fixed-width'></i> Как правильно выбрать путевку на Хадж
+                              </a>
+                            </div>
+                            </div>
+                        </div>
+
+                      </div>
                     </div>
                     <div class='box'><a class="btn btn-contrast btn-bordered btn-block" href="#">Show project</a></div>
                   </div>
