--- a/darelsalam/index.html
+++ b/darelsalam/index.html
@@ -128,41 +128,34 @@
                       </span>
                     </a>
                     <ul class='dropdown-menu' role='menu'>
-                      <li class=''>
-                        <a href='hajj.html'>Хадж 2017</a>
+                      <li class='dropdown-submenu'>
+                        <a href='hajj.html'>
+                          Программы Хаджа 2017
+                          <i class='fa fa-angle-right'></i>
+                        </a>
+                        <ul class='dropdown-menu' role='menu'>
+                          <li>
+                            <a href='index.html'>Программа Хаджа «ДЭЛЮКС»</a>
+                          </li>
+                          <li>
+                            <a href='index.html'>Программа Хаджа «ЛЮКС»</a>
+                          </li>
+                          <li>
+                            <a href='index.html'>Программа Хаджа «ЭКОНОМ»</a>
+                          </li>
+                          <li>
+                            <a href='index.html'>Программа Хаджа «СУПЕР ЭКОНОМ»</a>
+                          </li>
+                        </ul>
                       </li>
                       <li class=''>
-                        <a href='index.html'>Home</a>
+                        <a href='index.html'>Необходимые документы и способы оплаты</a>
                       </li>
                       <li class=''>
-                        <a href='index2.html'>Home 2</a>
+                        <a href='index2.html'>Основы Хаджа</a>
                       </li>
                       <li class=''>
-                        <a href='index3.html'>Home 3</a>
-                      </li>
-                      <li class=''>
-                        <a href='boxed.html'>Boxed layout</a>
-                      </li>
-                      <li class=''>
-                        <a href='about_us.html'>About us</a>
-                      </li>
-                      <li class=''>
-                        <a href='services.html'>Services</a>
-                      </li>
-                      <li class=''>
-                        <a href='faq.html'>FAQ</a>
-                      </li>
-                      <li>
-                        <a href='404.html'>404 Error</a>
-                      </li>
-                      <li>
-                        <a href='500.html'>500 Error</a>
-                      </li>
-                      <li>
-                        <a href='coming_soon.html'>Coming soon</a>
-                      </li>
-                      <li>
-                        <a href='under_construction.html'>Under construction</a>
+                        <a href='index3.html'>Как правильно выбрать путевку на Хадж</a>
                       </li>
                     </ul>
                   </li>
@@ -174,61 +167,106 @@
                       </span>
                     </a>
                     <ul class='dropdown-menu' role='menu'>
-                      <li class=''>
-                        <a href='animations.html'>Animations</a>
-                      </li>
-                      <li class=''>
-                        <a href='elements.html'>Elements</a>
-                      </li>
-                      <li class=''>
-                        <a href='icons.html'>Icons</a>
-                      </li>
-                      <li class=''>
-                        <a href='forms.html'>Forms</a>
-                      </li>
-                      <li class=''>
-                        <a href='tables.html'>Tables</a>
-                      </li>
-                      <li class=''>
-                        <a href='typography.html'>Typography</a>
-                      </li>
-                      <li class=''>
-                        <a href='pricing_tables.html'>Pricing tables</a>
-                      </li>
                       <li class='dropdown-submenu'>
-                        <a href='index.html'>
-                          Submenu
+                        <a href='hajj.html'>
+                          Программы Умры 2017
                           <i class='fa fa-angle-right'></i>
                         </a>
                         <ul class='dropdown-menu' role='menu'>
                           <li>
-                            <a href='index.html'>Submenu item</a>
+                            <a href='index.html'>Программа Умры «РАДЖАБ», Апрель 2017</a>
                           </li>
                           <li>
-                            <a href='index.html'>Submenu item</a>
+                            <a href='index.html'>Программа Умры «ШААБАН», Май 2017</a>
                           </li>
                           <li>
-                            <a href='index.html'>Submenu item</a>
+                            <a href='index.html'>Программа Умры «Зам-Зам», 5 звезд в Апреле и в Мае</a>
                           </li>
                         </ul>
                       </li>
+                      <li class=''>
+                        <a href='elements.html'>Необходимые документы и способы оплаты</a>
+                      </li>
+                      <li class='dropdown-submenu'>
+                        <a href='hajj.html'>
+                          Умра в Рамадан
+                          <i class='fa fa-angle-right'></i>
+                        </a>
+                        <ul class='dropdown-menu' role='menu'>
+                          <li>
+                            <a href='index.html'>Программа Умры «ВЕСЬ РАМАДАН»</a>
+                          </li>
+                          <li>
+                            <a href='index.html'>Программа Умры «ПОСЛЕДНИЕ 10 ДНЕЙ РАМАДАНА». 3 звезды</a>
+                          </li>
+                          <li>
+                            <a href='index.html'>Программа Умры «ЗАМ-ЗАМ» ПОСЛЕДНИЕ 10 ДНЕЙ РАМАДАНА», 5 звезд</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="javascript:void(0)">
+                          Индивидуальные программы Умры
+                        </a>
+                      </li>
+                      <li class=''>
+                        <a href='forms.html'>Основы Умры</a>
+                      </li>
                     </ul>
                   </li>
-                  <li>
-                    <a href='#'>
+                  <li class='dropdown'>
+                    <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
                       <span>
-                        Дар Эль Салам
+                        Особенности
                         <br>
-                        о компании
+                        «Дар эль Салам»
+                        <i class='fa fa-angle-down'></i>
                       </span>
                     </a>
+                    <ul class='dropdown-menu' role='menu'>
+                      <li class=''>
+                        <a href='animations.html'>О компании</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Особенности программ от Дар эль Салам</a>
+                      </li>
+                    </ul>
                   </li>
-                  <li>
-                    <a href='#'>
+                  <li class='dropdown'>
+                    <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
                       <span>
-                        В помощь <br> паломникам
+                        Полезная
+                        <br>
+                        информация
+                        <i class='fa fa-angle-down'></i>
                       </span>
                     </a>
+                    <ul class='dropdown-menu' role='menu'>
+                      <li class=''>
+                        <a href='animations.html'>Главное о Хадже</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Как подготовиться к Хаджу и Умре</a>
+                      </li>
+                      <li class=''>
+                        <a href='animations.html'>Книги о Хадже и Умре</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Памятка паломнику</a>
+                      </li>
+                      <li class=''>
+                        <a href='animations.html'>Словарь терминов</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Польза и ценность совершения Хаджа и Умры</a>
+                      </li>
+                      <li class=''>
+                        <a href='animations.html'>Проверка знаний</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Статьи о Хадже и Умре</a>
+                      </li>
+                    </ul>
                   </li>
                   <li class='dropdown'>
                     <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
@@ -239,25 +277,37 @@
                     </a>
                     <ul class='dropdown-menu' role='menu'>
                       <li class=''>
-                        <a href='portfolio.html'>2 columns</a>
+                        <a href='animations.html'>Фото с Хаджа с «Дар эль Салам»</a>
                       </li>
                       <li class=''>
-                        <a href='portfolio_three_cols.html'>3 columns</a>
+                        <a href='elements.html'>Видео с Хаджа</a>
                       </li>
                       <li class=''>
-                        <a href='portfolio_four_cols.html'>4 columns</a>
+                        <a href='animations.html'>Приложения и программы о Хадже</a>
                       </li>
                       <li class=''>
-                        <a href='portfolio_detail.html'>Project detail</a>
+                        <a href='elements.html'>Прямая трансляция из Мекки</a>
+                      </li>
+                      <li class=''>
+                        <a href='animations.html'>Прямая трансляция из Медины</a>
                       </li>
                     </ul>
                   </li>
-                  <li>
-                    <a href='#'>
+                  <li class='dropdown'>
+                    <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
                       <span>
-                        Хадж Миссия России
+                        Хадж-Миссия РФ
+                        <i class='fa fa-angle-down'></i>
                       </span>
                     </a>
+                    <ul class='dropdown-menu' role='menu'>
+                      <li class=''>
+                        <a href='animations.html'>Хадж-Миссия РФ, цели и задачи</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Совет по Хаджу и его состав</a>
+                      </li>
+                    </ul>
                   </li>
                   <li class='dropdown'>
                     <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
@@ -268,13 +318,10 @@
                     </a>
                     <ul class='dropdown-menu' role='menu'>
                       <li class=''>
-                        <a href='contact.html'>Контакты</a>
+                        <a href='contact.html'>Офис в Москве</a>
                       </li>
                       <li class=''>
-                        <a href='contact2.html'>Контакты</a>
-                      </li>
-                      <li class=''>
-                        <a href='contact3.html'>Контакты</a>
+                        <a href='contact2.html'>Представительство в Махачкале</a>
                       </li>
                     </ul>
                   </li>
@@ -388,13 +435,13 @@
                             </div>
                           </div>
                           <div class="col-xs-10">
-                            <h3 class='panel-title'>10 ночей Рамадана</h3>
+                            <h3 class='panel-title'>Весь Рамадан</h3>
                             <div class="panel-body__list-item-text">
-                              5 ночей в Movenpick Hotel (5 звёзд) - Медина
+                              До 30 дней Рамадана. 3 Звезды. 1500 долл.
                               <br>
-                              5 ночей в Al Shohada Hotel (5 звёзд) - Мекка
-                              <br>
-                              С 6 по 17 июля 2013 г. От 1895 долл.
+                             По этой программе вы можете провести в Мекке и Медине весь месяц Рамадан, или любое количество дней на ваше усмотрение
+                             <br>
+                             (25, 20, 15 или др. количество дней).
                             </div>
                           </div>
                         </div>
@@ -407,13 +454,11 @@
                             </div>
                           </div>
                           <div class="col-xs-10">
-                            <h3 class='panel-title'>5 ночей Рамадана</h3>
+                            <h3 class='panel-title'>Таравих</h3>
                             <div class="panel-body__list-item-text">
-                              2 ночей в Movenpick Hotel (5 звёзд) - Медина
+                              Последние 13 дней Рамадана»
                               <br>
-                              3 ночей в Al Shohada Hotel (5 звёзд) - Мекка
-                              <br>
-                              С 6 по 17 июля 2013 г. От 1895 долл.
+                              3 звезды. 1500 долл.
                             </div>
                           </div>
                         </div>
@@ -426,13 +471,11 @@
                             </div>
                           </div>
                           <div class="col-xs-10">
-                            <h3 class='panel-title'>3 ночи Рамадана</h3>
+                            <h3 class='panel-title'>Зам-зам</h3>
                             <div class="panel-body__list-item-text">
-                              1 ночей в Movenpick Hotel (5 звёзд) - Медина
+                              Последние 13 дней Рамадана.
                               <br>
-                              2 ночей в Al Shohada Hotel (5 звёзд) - Мекка
-                              <br>
-                              С 6 по 17 июля 2013 г. От 1895 долл.
+                              5 звезд.
                             </div>
                           </div>
                         </div>
