added main slider html

--- a/rbk/index.html
+++ b/rbk/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>РБК Строй Инвест</title>
+  <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="assets/css/screen.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -61,7 +62,47 @@
     </div>
   </div>
 </header>
-<div class="page-wrapper"></div>
+<div class="page-wrapper">
+  <section class="rbk-main-slider">
+    <div class="rbk-main-slider-content">
+      <div class="container-fluid">
+        <div class="rbk-main-slider__item">
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="rbk-main-slider__item-pic">
+                <img src="http://placehold.it/572x400/adc7c1/333" alt="">
+              </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="rbk-main-slider__item-text">
+                <h1 class="rbk-main-slider__item-text-title">
+                  Жилой комплекс
+                  <br>
+                  «Столичный»
+                </h1>
+                <div class="rbk-main-slider__item-text-subtitle">
+                  Российская компания с европейским подходом к строительству. Является правопреемником швейцарской строительной компании FLOORTECH INTERNATIONAL GMBH.
+                </div>
+                <a href="javascript:void(0)" class="more-button more-button_size_m more-button_style_white">
+                  Подробнее
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row  col-xs-6 col-xs-offset-6">
+          <div class="rbk-main-slider__paginator">
+            <div class="rbk-main-slider__paginator-item active"></div>
+            <div class="rbk-main-slider__paginator-item"></div>
+            <div class="rbk-main-slider__paginator-item"></div>
+            <div class="rbk-main-slider__paginator-item"></div>
+            <div class="rbk-main-slider__paginator-item"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
 </body>
 </html>
 
