--- a/rbk/under_construction.html
+++ b/rbk/under_construction.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>РБК Строй Инвест</title>
+  <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="assets/css/screen.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/terminator.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic-ext" rel="stylesheet">
 </head>
 <body>
